# pykdeconnect

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.rst  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  ssl_workaround.c  ssl_workaround.pyi  test-requirements.txt  tox.ini
.github/workflows/: ci.yml  python-lint.yml  python-publish.yml  python-test.yml
doc/: config.yaml  payload_advertisement.json  payload_response.json
include/: _ssl.h
pykdeconnect/: __init__.py  __main__.py  client.py  config.py  const.py  device_manager.py  devices.py  exceptions.py  helpers.py  payloads.py  plugin.py  plugin_registry.py  pluginregistry.py  plugins.py  protocols.py  ssl_workaround.pyi  storage.py  vol_extra.py
pykdeconnect/dataclass_json/: __init__.py  __main__.py  common.py  decode.py  encode.py
pykdeconnect/plugins/: battery.py  notification.py  ping.py  plugin.py
src/: ssl_workaround.c
tests/: test_device_manager.py  test_device_type.py  test_helpers.py  test_plugin_registry.py  test_protocols.py  test_vol_extra.py  utils.py
tests/plugins/: test_battery_plugin.py  test_ping_plugin.py
