[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.isort]
multi_line_output = 5
src_paths = ["pykdeconnect", "tests"]

[tool.mypy]
show_error_codes = true
strict = true
warn_unreachable = true
files = ["pykdeconnect"]

[tool.coverage.run]
source = ["pykdeconnect"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]
