[metadata]
name = pykdeconnect
version = 0.0.1-1
author = Adrian Freund
author_email = git@freundtech.com
description = A python implementation of the kdeconnect protocol
long_description = file: README.rst, LICENSE.txt
url = https://github.com/freundTech/pykdeconnect
keywords = kde, connect
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities
    Typing :: Typed
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    cryptography>=35.0.0
    typing_extensions>=4.1.1,<5.0
    voluptuous>=0.12.2

[options.package_data]
pykdeconnect = py.typed


[flake8]
max-line-length = 100

[isort]
multi_line_output = 5